--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.1",
-    "Aws": "ASDa"
+    "web-vitals": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
